# python-formatting

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .sqlfluff  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yaml
.github/workflows/: ci.yaml  pre-commit.yaml  publish.yaml  pytest.yaml  setup.yaml
dbt/: profiles.yml
src/: app.py
tests/: unit_test.py
