[tool.poetry]
name = "python-formatting"
version = "0.2.7"
description = "Sample project to setup code testing and formatting tools"
authors = ["Sadik Bakiu <sadik@data-max.io>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
keyring = "^25.1.0"
keyrings-google-artifactregistry-auth = "^1.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
black = "^24.4.2"
sqlfluff = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["isort", "test"]
line_length = 120

[tool.sqlfluff.core]
templater = "dbt"
dialect = "ansi"

[tool.sqlfluff.rules]
tab_space_size = 4
max_line_length = 120

[tool.sqlfluff.templater.dbt]
project_dir = "dbt/dbt_test_project"
profiles_dir = "dbt"
profile = "default"
target = "test"

[tool.flake8]
exclude = [".git", "__pycache__"]
max-line-length = 120

[tool.pytest]
pythonpath = "."